[package]
name = "bip85_password"
version = "0.1.2"
edition = "2021"
authors = [ "enVinci" ]
description = "Generate a password base on an BIP-32 Root Key or 24 word BIP-39 mnemonic phrase. The derivation path is m/83696968'/707764'/{pwd_len}'/{index}'."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.5.15", features = ["derive"]}
base64 = "0.22.1"
bitcoin = "0.32.2"
hmac = "0.12.1"
sha2 = "0.10.8"  # For SHA-512"
bip32 = "0.5.2"
#secp256k1 = "0.29.0"
#rand_core = { version = "0.6.4", features = ["std"] }
rand = "0.8.5"
chacha20poly1305 = "0.10.1"
anyhow = "1.0.86"
rpassword = "7.3.1"
clippers = "0.1.2"
